tests/ui/traits/vtable/vtable-multi-level.stderr
error: vtable entries for `<S as O>`: [
           Method(<S as A>::foo_a),
           Method(<S as B>::foo_b),
           TraitVPtr(<S as B>),
           Method(<S as C>::foo_c),
           Method(<S as D>::foo_d),
           TraitVPtr(<S as D>),
           Method(<S as E>::foo_e),
           TraitVPtr(<S as E>),
           Method(<S as F>::foo_f),
           TraitVPtr(<S as F>),
           Method(<S as G>::foo_g),
           Method(<S as H>::foo_h),
           TraitVPtr(<S as H>),
           Method(<S as I>::foo_i),
           TraitVPtr(<S as I>),
           Method(<S as J>::foo_j),
           TraitVPtr(<S as J>),
           Method(<S as K>::foo_k),
           TraitVPtr(<S as K>),
           Method(<S as L>::foo_l),
           TraitVPtr(<S as L>),
           Method(<S as M>::foo_m),
           TraitVPtr(<S as M>),
           Method(<S as N>::foo_n),
           TraitVPtr(<S as N>),
           Method(<S as O>::foo_o),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:97:1
   |
LL | trait O: G + N {
   | ^^^^^^^^^^^^^^

error: vtable entries for `<S as A>`: [
           Method(<S as A>::foo_a),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:14:1
   |
LL | trait A {
   | ^^^^^^^

error: vtable entries for `<S as B>`: [
           Method(<S as B>::foo_b),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:20:1
   |
LL | trait B {
   | ^^^^^^^

error: vtable entries for `<S as C>`: [
           Method(<S as A>::foo_a),
           Method(<S as B>::foo_b),
           TraitVPtr(<S as B>),
           Method(<S as C>::foo_c),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:26:1
   |
LL | trait C: A + B {
   | ^^^^^^^^^^^^^^

error: vtable entries for `<S as D>`: [
           Method(<S as D>::foo_d),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:32:1
   |
LL | trait D {
   | ^^^^^^^

error: vtable entries for `<S as E>`: [
           Method(<S as E>::foo_e),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:38:1
   |
LL | trait E {
   | ^^^^^^^

error: vtable entries for `<S as F>`: [
           Method(<S as D>::foo_d),
           Method(<S as E>::foo_e),
           TraitVPtr(<S as E>),
           Method(<S as F>::foo_f),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:44:1
   |
LL | trait F: D + E {
   | ^^^^^^^^^^^^^^

error: vtable entries for `<S as H>`: [
           Method(<S as H>::foo_h),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:55:1
   |
LL | trait H {
   | ^^^^^^^

error: vtable entries for `<S as I>`: [
           Method(<S as I>::foo_i),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:61:1
   |
LL | trait I {
   | ^^^^^^^

error: vtable entries for `<S as J>`: [
           Method(<S as H>::foo_h),
           Method(<S as I>::foo_i),
           TraitVPtr(<S as I>),
           Method(<S as J>::foo_j),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:67:1
   |
LL | trait J: H + I {
   | ^^^^^^^^^^^^^^

error: vtable entries for `<S as K>`: [
           Method(<S as K>::foo_k),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:73:1
   |
LL | trait K {
   | ^^^^^^^

error: vtable entries for `<S as L>`: [
           Method(<S as L>::foo_l),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:79:1
   |
LL | trait L {
   | ^^^^^^^

error: vtable entries for `<S as M>`: [
           Method(<S as K>::foo_k),
           Method(<S as L>::foo_l),
           TraitVPtr(<S as L>),
           Method(<S as M>::foo_m),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:85:1
   |
LL | trait M: K + L {
   | ^^^^^^^^^^^^^^

error: vtable entries for `<S as N>`: [
           Method(<S as H>::foo_h),
           Method(<S as I>::foo_i),
           TraitVPtr(<S as I>),
           Method(<S as J>::foo_j),
           Method(<S as K>::foo_k),
           TraitVPtr(<S as K>),
           Method(<S as L>::foo_l),
           TraitVPtr(<S as L>),
           Method(<S as M>::foo_m),
           TraitVPtr(<S as M>),
           Method(<S as N>::foo_n),
           MetadataDropInPlace,
           MetadataTyLayout,
       ]
  --> $DIR/vtable-multi-level.rs:91:1
   |
LL | trait N: J + M {
   | ^^^^^^^^^^^^^^

error: aborting due to 14 previous errors

